add video in gallaryPopup and gallaryThumbs

--- a/src/templates/pages/text-page.html
+++ b/src/templates/pages/text-page.html
@@ -35,6 +35,25 @@
                 <div class="thumbs-slider">
                     <div class="swiper-container thumbs-slider__main js-thumbs-slider__main">
                         <div class="swiper-wrapper">
+                            <div  class="swiper-slide">
+                                <div class="video">
+                                    <div class="video__body">
+                                        <picture class="video__preview">
+                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
+                                            <source srcset="img/AA5J7433.webp" type="image/webp">
+                                            <!--[if IE 9]></video><![endif]-->
+                                            <img src="img/AA5J7433.jpg"   title="" alt="">
+                                        </picture>
+                                        <video class="video__player" controls preload="auto">
+                                            <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
+                                            <!--                                        для лучшей поддержки набо еще подгружать второй сорс в видео в формате webm-->
+                                            <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.webmhd.webm" type="video/webm">
+                                            Your browser does not support the video tag.
+                                        </video>
+                                        <div class="video__time"></div>
+                                    </div>
+                                </div>
+                            </div>
                             <a href="#" class="swiper-slide">
                                 <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
@@ -107,23 +126,15 @@
                                     <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                             </div>
-                            <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                    <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                    <source srcset="img/AA5J6740.webp" type="image/webp">
-                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg"   title="" alt="">
-                                </picture>
-                            </div>
                         </div>
                         <div class="swiper-container thumbs-slider__nav js-thumbs-slider__nav">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
+                                    <picture class="video__preview">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
+                                        <source srcset="img/AA5J7433.webp" type="image/webp">
+                                        <!--[if IE 9]></video><![endif]-->
+                                        <img src="img/AA5J7433.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
