--- a/src/blocks/modules/galleryPopup/galleryPopup.scss
+++ b/src/blocks/modules/galleryPopup/galleryPopup.scss
@@ -54,6 +54,10 @@
                     background-color: #1a1a1a;
                     margin-bottom: 82px;
                 }
+                .video {
+                    background-color: #1a1a1a;
+                    margin-bottom: 82px;
+                }
             }
 
             &__nav {
@@ -82,6 +86,13 @@
                         &::before {
                             border-color: $coral;
                             opacity: 1;
+                        }
+                    }
+
+                    .video__preview {
+                        &:before {
+                            width: 40px;
+                            height: 40px;
                         }
                     }
                 }
