--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -125,6 +125,26 @@
                 transform: translate(-50%, -50%);
             }
         }
+
+        .video{
+            &__body {
+                box-sizing: border-box;
+                display: block;
+                position: relative;
+                width: 100%;
+                overflow: hidden;
+                padding-bottom: 66.3%;
+                border-bottom: 0;
+                background-color: #1a1a1a;
+            }
+            &__preview {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                @include object-fit(cover, center);
+            }
+        }
+
     }
 
     &__nav {
@@ -191,6 +211,32 @@
                 height: 100%;
                 margin: auto;
                 transform: translate(-50%, -50%);
+            }
+        }
+        .video{
+            &__preview {
+                box-sizing: border-box;
+                display: block;
+                position: relative;
+                width: 100%;
+                overflow: hidden;
+                padding-bottom: 66.3%;
+                background-color: $text-silver;
+                &:before {
+                    width: 40px;
+                    height: 40px;
+                }
+                img {
+                    @include object-fit(cover, center);
+                    display: block;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    width: 100%;
+                    height: 100%;
+                    margin: auto;
+                    transform: translate(-50%, -50%);
+                }
             }
         }
     }
