--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -67,7 +67,7 @@
 
                                 <div class="buttons">
                                     <button type="submit" class="btn btn--primary">Применить</button>
-                                    <button type="reset" class="btn btn--secondary">Сбросить фильтры</button>
+                                    <a href=""  class="btn btn--secondary">Сбросить фильтры</a>
                                 </div>
                             </div>
                         </div>
