--- a/src/templates/pages/results.html
+++ b/src/templates/pages/results.html
@@ -75,7 +75,7 @@
 
                                 <div class="buttons">
                                     <button type="submit" class="btn btn--primary">Применить</button>
-                                    <button type="reset" class="btn btn--secondary">Сбросить фильтры</button>
+                                    <a href=""  class="btn btn--secondary">Сбросить фильтры</a>
                                 </div>
 
                             </div>
@@ -83,22 +83,24 @@
                     </form>
 
                     <div class="results-nav__links">
-                        <a href="#0" class="results-nav__link active">
-                            <span class="name">Все</span>
-                            <span class="count">325</span>
-                        </a>
-                        <a href="#0" class="results-nav__link">
-                            <span class="name">Сотрудники</span>
-                            <span class="count">105</span>
-                        </a>
-                        <a href="#0" class="results-nav__link">
-                            <span class="name">Новости</span>
-                            <span class="count">162</span>
-                        </a>
-                        <a href="#0" class="results-nav__link">
-                            <span class="name">Медиа</span>
-                            <span class="count">58</span>
-                        </a>
+                        <div class="results-nav__links-inner">
+                            <a href="#0" class="results-nav__link active">
+                                <span class="name">Все</span>
+                                <span class="count">325</span>
+                            </a>
+                            <a href="#0" class="results-nav__link">
+                                <span class="name">Сотрудники</span>
+                                <span class="count">105</span>
+                            </a>
+                            <a href="#0" class="results-nav__link">
+                                <span class="name">Новости</span>
+                                <span class="count">162</span>
+                            </a>
+                            <a href="#0" class="results-nav__link">
+                                <span class="name">Медиа</span>
+                                <span class="count">58</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
