--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -529,7 +529,6 @@
             }
 
             .count {
-                display: none;
                 font-size: 0.875rem;
                 line-height: 1.43;
                 color: $coral;
@@ -622,8 +621,9 @@
                         display: block;
                         width: calc(100% - 64px);
                         max-width: 350px;
-                        margin: 88px auto 0;
+                        margin: 24px auto 0;
                         .btn {
+                            display: block;
                             width: 100%;
                             margin-top: 16px;
 
@@ -739,9 +739,12 @@
                 }
 
                 &__clear {
-                    top: 50%;
-                    right: 16px;
-                    transform: translateY(-50%);
+                    top: 2px;
+                    @media (max-width: 520px)   {
+                        top: 50%;
+                        transform: translateY(-50%);
+                        right: 16px ;
+                    }
                 }
 
                 &__btn {
@@ -797,18 +800,26 @@
         }
 
         &__links {
-            display: flex;
             margin: 0 220px;
             @media (max-width: $media-lg) {
-                width: calc(100% + 32px);
+                display: flex;
+                padding-right: 16px;
+                padding-left: 16px;
+                max-width: 100vw;
                 overflow: -moz-scrollbars-none;
-                margin: 32px 0 0 -16px;
+                margin: 32px -16px 0 -16px;
                 padding-left: 16px;
                 overflow-x: auto;
                 -ms-overflow-style: none;
                 scrollbar-width: none;
                 &::-webkit-scrollbar {
                     display: none;
+                }
+            }
+            &-inner {
+                display: flex;
+                @media (max-width: $media-lg) {
+                    padding-right: 16px;
                 }
             }
         }
