--- a/src/blocks/modules/galleryPopup/galleryPopup.scss
+++ b/src/blocks/modules/galleryPopup/galleryPopup.scss
@@ -3,6 +3,12 @@
 .modal {
     .comments {
         padding: 0 32px 48px;
+        @media (max-width: $media-sm) {
+            padding: 0 16px 32px;
+        }
+        .comments__message-form-buffer {
+            width: 100% !important;
+        }
         &__header {
             margin-bottom: 24px;
             h2 {
@@ -25,6 +31,9 @@
 
     .modal-dialog {
         max-width: $media-lg;
+        @media (max-width: $media-sm) {
+            margin: 0;
+        }
     }
 
     .modal-content {
@@ -33,6 +42,26 @@
         border: none;
 
         .thumbs-slider {
+            @media (max-width: $media-sm) {
+                margin-bottom: 20px;
+                .swiper-pagination {
+                    justify-content: flex-start;
+                    position: fixed;
+                    top: 20px;
+                    left: 16px;
+                    width: auto;
+                    max-width: 192px;
+                    height: 20px;
+                    background: none;
+                    border-radius: 0;
+                    filter: none;
+                    font-weight: $font-weight-bold;
+                    color: $text-black;
+                    text-align: left;
+                    font-size: rem(16);
+                    line-height: 1.25;
+                }
+            }
 
             .swiper-button {
                 pointer-events: all;
@@ -50,13 +79,32 @@
                         display: none;
                     }
                 }
-                &-img {
-                    background-color: #1a1a1a;
-                    margin-bottom: 82px;
-                }
                 .video {
                     background-color: #1a1a1a;
                     margin-bottom: 82px;
+                    @media (max-width: $media-lg) {
+                        max-width: none;
+                    }
+                    @media (max-width: $media-sm) {
+                        margin-bottom: 0;
+                        margin-top: 64px;
+                        &__body {
+                            margin-bottom: 0;
+                        }
+                    }
+                }
+                &-img {
+                    background-color: #1a1a1a;
+                    margin-bottom: 82px;
+                    @media (max-width: $media-sm) {
+                        margin-bottom: 0;
+                        margin-top: 64px;
+                    }
+                    img {
+                        @include object-fit(contain, center);
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
             }
 
@@ -68,9 +116,19 @@
                 background-color: $black;
                 margin-top: 8px;
                 opacity: 1;
+                @media (max-width: $media-sm) {
+                    display: none !important;
+                }
 
                 .swiper-slide {
                     position: relative;
+
+                    .video__preview {
+                        &:before {
+                            width: 40px;
+                            height: 40px;
+                        }
+                    }
                     &::before {
                         content: '';
                         display: block;
@@ -88,19 +146,15 @@
                             opacity: 1;
                         }
                     }
-
-                    .video__preview {
-                        &:before {
-                            width: 40px;
-                            height: 40px;
-                        }
-                    }
                 }
             }
 
             &__description {
                 position: relative;
                 padding-top: 24px;
+                @media (max-width: $media-sm) {
+                    padding: 16px 16px 24px;
+                }
                 .title {
                     font-size: rem(20);
                     line-height: 1.2;
@@ -108,16 +162,19 @@
 
                 .like-item {
                     position: absolute;
-                    right: 32px;
                     top: 28px;
+                    right: 32px;
+                    padding: 0;
                     box-shadow: none;
                     border-radius: 0;
                     font-size: rem(16);
                     line-height: 1.25;
                     letter-spacing: normal;
                     text-align: right;
-                    padding: 0;
                     color: $text-silver;
+                    @media (max-width: $media-sm) {
+                        display: none;
+                    }
                     .icon {
                         width: 24px;
                         height: 24px;
@@ -135,12 +192,28 @@
             border-radius: 8px;
         }
     }
-
+    .modal-gallery__controls {
+        @media (max-width: $media-sm) {
+            position: fixed;
+            z-index: 10;
+            top: 0;
+            right: 0;
+            left: 0;
+            margin-bottom: 0;
+            padding-top: 16px;
+            padding-right: 16px;
+            padding-bottom: 16px;
+            pointer-events: all;
+            background-color: $white;
+            box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+        }
+    }
     &__controls {
         display: flex;
         align-items: center;
         justify-content: flex-end;
         margin-bottom: 76px;
+
 
         .btn {
             @include transition();
