--- a/src/blocks/modules/text-logo/text-logo.scss
+++ b/src/blocks/modules/text-logo/text-logo.scss
@@ -12,6 +12,8 @@
     &__item {
         display: block;
         flex: 1 1 auto;
+        position: relative;
+        max-height: 216px;
         overflow: hidden;
         margin: 0 16px;
         border-radius: 5px;
@@ -24,9 +26,11 @@
         display: block;
         padding-bottom: 75%;
         background-color: $silver-light;
-        position: relative;
+        max-height: 216px;
+        overflow: hidden;
 
         img {
+            @include object-fit(contain, center);
             display: block;
             position: absolute;
             top: 50%;
@@ -34,7 +38,8 @@
             width: 100%;
             max-width: 100%;
             height: 100%;
-            max-height: 100%;
+            max-height: 216px;
+            overflow: hidden;
             transform: translate(-50%, -50%);
         }
     }
