--- a/src/templates/pages/profile.html
+++ b/src/templates/pages/profile.html
@@ -226,10 +226,17 @@
 
                 <div class="profile-biography">
                     <h2 class="profile-biography__title">Биография</h2>
-                    <div class="profile-biography__text">Фарс монотонно образует первоначальный меланхолик, таким
+                    <div class="profile-biography__text short-text">Фарс монотонно образует первоначальный меланхолик, таким
                         образом, все перечисленные признаки архетипа и мифа подтверждают, что действие механизмов
                         мифотворчества сродни механизмам художественно-продуктивного мышления. Фабульный каркас, как бы
                         …
+                    </div>
+                    <div class="profile-biography__text short-text full-text">Фарс монотонно образует первоначальный меланхолик, таким
+                        образом, все перечисленные признаки архетипа и мифа подтверждают, что действие механизмов
+                        мифотворчества сродни механизмам художественно-продуктивного мышления. Фабульный каркас, как бы
+                        Фарс монотонно образует первоначальный меланхолик, таким
+                        образом, все перечисленные признаки архетипа и мифа подтверждают, что действие механизмов
+                        мифотворчества сродни механизмам художественно-продуктивного мышления. Фабульный каркас, как бы
                     </div>
                     <button type="button" class="profile-biography__more">Показать полностью</button>
                 </div>
